--- a/index.html
+++ b/index.html
@@ -49,13 +49,25 @@
             <h2>30/04/1975 - 30/04/2025</h2>
             <p id="typing-text" class="typing-text"></p>
         </div>
+        <div id="section-one-next" class="btn-container">
+            <button>Tìm hiểu thêm<br>
+                <svg stroke="currentColor" fill="currentColor" stroke-width="0" viewBox="0 0 16 16" height="20px"
+                    width="20px" xmlns="http://www.w3.org/2000/svg">
+                    <path fill-rule="evenodd"
+                        d="M1.646 6.646a.5.5 0 0 1 .708 0L8 12.293l5.646-5.647a.5.5 0 0 1 .708.708l-6 6a.5.5 0 0 1-.708 0l-6-6a.5.5 0 0 1 0-.708">
+                    </path>
+                    <path fill-rule="evenodd"
+                        d="M1.646 2.646a.5.5 0 0 1 .708 0L8 8.293l5.646-5.647a.5.5 0 0 1 .708.708l-6 6a.5.5 0 0 1-.708 0l-6-6a.5.5 0 0 1 0-.708">
+                    </path>
+                </svg></button>
+        </div>
     </section>
     <section class="section-two">
         <h1><img src="./images//Emblem_of_Viet_Cong.svg.webp" alt="Quan-huy">CHIẾN DỊCH HỒ CHÍ MINH</h1>
         <div class="row">
             <div class="col-6">
 
-                <div class="text-two-l-a wow fadeInRight">
+                <div class="text-two-l-a wow animated fadeInRight">
                     <div class="bgr-img-l"><img src="./images/background-giay-bao-cu-dep-nhat_080332437.jpg" alt="bgr">
                     </div>
                     <p>
@@ -76,7 +88,7 @@
                         lồ quanh cổ họng Sài Gòn".
                     </p>
                 </div>
-                <div class="text-two-l-b wow fadeInLeft">
+                <div class="text-two-l-b wow animated fadeInLeft">
                     <div class="bgr-img-l"><img src="./images/background-giay-bao-cu-dep-nhat_080332437.jpg" alt="bgr">
                     </div>
                     <p>
@@ -87,7 +99,7 @@
                     <p>
                         <span>Hãng UPI(Mỹ):</span><br>"Làn sóng quân đội Bắc Việt như cơn sóng thần quét qua từng góc
                         phố, với xe
-                        tăng, bộ binh và pháo binh hiệp dồng tác chiến mạnh".
+                        tăng, bộ binh và pháo binh hiệp đồng tác chiến mạnh".
                     </p>
                     <p>
                         <span>Đại tướng Văn Tiến Dũng:</span><br>"Đòn tổng công kích ngày 29/4 là bước ngoặc dứt điểm.
@@ -97,9 +109,9 @@
                 </div>
                 <div class="painImg-l">
                     <img src="./images/image.png" alt="bgr">
-                    <img class=" wow fadeInRight" src="./images//LanhDao/Dai-tuong-Le-Trong-Tan.png"
+                    <img class=" wow animated fadeInRight" src="./images//LanhDao/Dai-tuong-Le-Trong-Tan.png"
                         alt="Dai-tuong-Le-Trong-Tan">
-                    <img class=" wow fadeInLeft" src="./images//LanhDao/Dai-tuong-Van-Tien-Dung.png"
+                    <img class=" wow animated fadeInLeft" src="./images//LanhDao/Dai-tuong-Van-Tien-Dung.png"
                         alt="Dai-tuong-Van-Tien-Dung">
                     <div class="dt-vtd"></div>
                     <div class="dt-ltt"></div>
